--- a/.github/workflows/release-drafter-demo_ocpapi.yml
+++ b/.github/workflows/release-drafter-demo_ocpapi.yml
@@ -2,11 +2,11 @@ name: Release Drafter - fairchem_demo_ocpapi
 
 on:
   push:
-    # branches to consider in the event; optional, defaults to all
     branches:
       - main
     paths:
       - 'src/fairchem/demo/ocpapi/**'
+      - 'packages/fairchem-demo-ocpapi/**'
   workflow_dispatch:
 
 
@@ -23,6 +23,6 @@ jobs:
       - uses: release-drafter/release-drafter@v6
         with:
           disable-autolabeler: true
-          config-name: release-draft-demo_ocpapi
+          config-name: release-drafter-demo_ocpapi.yml
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
